[package]
name = "mqtt_to_system_command"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["mqtt", "system", "commands", "shell"]
categories = ["command-line-utilities"]
description = "An MQTT client that runs command line commands based on a configuration file or arbitrary input."
readme = "README.md"
homepage = "https://github.com/gstavrinos/mqtt_to_system_command/"
repository = "https://github.com/gstavrinos/mqtt_to_system_command/"

[dependencies]
anyhow = "1.0.100"
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
